# Setuptools v62.6 doesn't support editable installs with just 'pyproject.toml' (PEP 660).
# Keep this file until it does!

[metadata]
# wheel doesn't yet read license_files from pyproject.toml - tools.setuptools
# Keep it here until it does!
license_files =
    LICENSE
    CONTRIBUTORS.txt

[flake8]
# F401; Unused imports
# E203; Incompatible with black see https://github.com/psf/black/issues/315
# W503; Incompatible with black
# B901; Combine yield and return statements in one function
# B905; We still support python 3.9
# B906; Flake8 plugin specific check that is always going to be a false positive in pylint
# B907; Not worth a refactor
extend-ignore = F401, E203, W503, B901, B905, B906, B907
max-line-length = 110
select = B,C,E,F,W,T4,B9
# Required for flake8-typing-imports (v1.12.0)
# The plugin doesn't yet read the value from pyproject.toml
min_python_version = 3.7.2
